<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuarioActivity"
    android:padding="@dimen/min_margin_default"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_usuario"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:endIconMode="clear_text"
        app:helperText="@string/helper_text"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/counter_max_length"
        android:padding="@dimen/min_margin_default"
        android:hint="@string/nombre_de_usuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/counter_max_length"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:endIconMode="clear_text"
        app:helperText="@string/helper_text"
        android:padding="@dimen/min_margin_default"
        android:hint="@string/contrasenia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/counter_max_length"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_text"
        android:layout_marginTop="100dp"
        android:textAllCaps="false"/>
</LinearLayout>