<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_default">

    <TextView
        android:id="@+id/txvCodigoEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codigo_estudiante"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_estudiante"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvCodigoEstudiante"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/txvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_aplicativo"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvNombre"
        android:layout_marginTop="250dp" />
</androidx.constraintlayout.widget.ConstraintLayout>